# RustyIceberg.jl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LocalPreferences.toml  Makefile  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml  TagBot.yml  check-ffi-version-bump.yml  release.yml  test.yml
assets/incremental/test1/data/: 00000-16-e1fe0411-f9e9-436a-aa67-57e182f7b728-0-00001.parquet  00000-38-a951d037-3439-447f-8ab4-7f8c40f42daa-0-00001.parquet  00000-43-4aa600ad-8ce1-45f4-b23a-dd3b4adc83ed-0-00001.parquet  00000-49-3e01c1a1-4b17-4791-851a-ef2f47d9e688-00001-deletes.parquet  00000-49-3e01c1a1-4b17-4791-851a-ef2f47d9e688-00002-deletes.parquet  00001-2-1215e431-f3d7-48ba-a5de-66ab60e3010a-0-00001.parquet  00001-39-a951d037-3439-447f-8ab4-7f8c40f42daa-0-00001.parquet  00001-44-4aa600ad-8ce1-45f4-b23a-dd3b4adc83ed-0-00001.parquet  00002-33-b64e9ce4-f37b-4fdc-8534-b2664d773b07-0-00001.parquet  00002-40-a951d037-3439-447f-8ab4-7f8c40f42daa-0-00001.parquet  00002-45-4aa600ad-8ce1-45f4-b23a-dd3b4adc83ed-0-00001.parquet  00003-4-1215e431-f3d7-48ba-a5de-66ab60e3010a-0-00001.parquet  00003-41-a951d037-3439-447f-8ab4-7f8c40f42daa-0-00001.parquet  00003-46-4aa600ad-8ce1-45f4-b23a-dd3b4adc83ed-0-00001.parquet  00004-35-b64e9ce4-f37b-4fdc-8534-b2664d773b07-0-00001.parquet  00004-42-a951d037-3439-447f-8ab4-7f8c40f42daa-0-00001.parquet  00004-47-4aa600ad-8ce1-45f4-b23a-dd3b4adc83ed-0-00001.parquet
assets/incremental/test1/metadata/: 00000-9b1f6e90-9146-4446-bc93-9625ad2f12de.metadata.json  00000-cf659803-d5fa-44fe-9c86-ecfc225f11ce.metadata.json  00000-d4d80e79-dc1a-4a50-a636-25cf30946d09.metadata.json  00000-fa2b5723-9c14-4ea2-bb9f-d39644a8849f.metadata.json  00001-43d0a4ca-f14a-44ec-ba6f-9dcf4ab2b8db.metadata.json  00002-ec6c7e37-0b8f-44b3-bb11-7fee9a9091ca.metadata.json  00003-359e8bb8-1e5d-46d2-bcde-fdaeaa41114f.metadata.json  13d31e71-0067-4bf5-92a2-2bb1b51cc181-m0.avro  154380bf-11a5-4ac4-8c8f-6ade7758b93c-m0.avro  2e224b4d-1419-4378-b5ae-76f3ee5e039d-m0.avro  f6b39896-f4f2-43d8-8f02-990884cd7287-m0.avro  (+4 more)
assets/rest/: iceberg_catalog.db
docker/: README.md  docker-compose.yml
docker/assets/polaris/: create-catalog.sh  obtain-token.sh  setup-all.sh
docker/scripts/: create-tables.py
docker/spark/: Dockerfile  create-tables.py  init-datasets.py
examples/: README.md  basic_usage.jl  env.example
iceberg_rust_ffi/: Cargo.toml  Makefile  README.md
iceberg_rust_ffi/.cargo/: config.toml
iceberg_rust_ffi/docs/: pipeline-unification.md
iceberg_rust_ffi/src/: batch_builder.rs  catalog.rs  data_file.rs  error_codes.rs  full.rs  full_pipeline.rs  incremental.rs  incremental_pipeline.rs  lib.rs  nested_pipeline.rs  ordered_file_pipeline.rs  pipeline_stats.rs  record_batch_builder.rs  response.rs  scan_common.rs  table.rs  transaction.rs  util.rs  warm_file_stream.rs  writer.rs  writer_columns.rs
src/: Iceberg.jl  RustyIceberg.jl  catalog.jl  data_file.jl  full.jl  incremental.jl  scan_common.jl  schema.jl  transaction.jl  writer.jl
test/: catalog_tests.jl  error_tests.jl  overwrite_tests.jl  perf_config_tests.jl  runtests.jl  scan_tests.jl  schema_tests.jl  test_config.jl  test_helpers.jl  transaction_tests.jl  writer_tests.jl
(+32 files in other folders)
