[package]
name = "iceberg_rust_ffi"
version = "0.8.0"
edition = "2021"

[lib]
name = "iceberg_rust_ffi"
crate-type = ["cdylib"]

[features]
default = ["julia"]
julia = []

[dependencies]
iceberg = { git = "https://github.com/RelationalAI/iceberg-rust.git", rev = "aec29baaeb16dd9b4d2c5c4416ac4b5829fe3378", features = ["storage-azdls"] }
iceberg-catalog-rest = { git = "https://github.com/RelationalAI/iceberg-rust.git", rev = "aec29baaeb16dd9b4d2c5c4416ac4b5829fe3378" }
object_store_ffi = { git = "https://github.com/RelationalAI/object_store_ffi", rev = "79b08071c7a1642532b5891253280861eca9e44e", default-features = false }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
libc = "0.2"
anyhow = "1.0"
arrow-array = "57.1"
arrow-ipc = "57.1"
tracing-subscriber = "0.3"
tracing = "0.1"
once_cell = "1.19"
async-trait = "0.1"
# Pin home to 0.5.9 to support rustc < 1.88
# (0.5.11+ requires rustc 1.88+)
home = "=0.5.9"
serde_json = "1.0.142"

[dev-dependencies]
tempfile = "3.0"
