[package]
name = "iceberg_rust_ffi"
version = "0.7.12"
edition = "2021"

[lib]
name = "iceberg_rust_ffi"
crate-type = ["cdylib"]

[features]
default = ["julia"]
julia = []

[dependencies]
iceberg = { git = "https://github.com/RelationalAI/iceberg-rust.git", rev = "b8cb387be9d071a14ef472099d4ff853475f1a3e", features = ["storage-azdls"] }
iceberg-catalog-rest = { git = "https://github.com/RelationalAI/iceberg-rust.git", rev = "b8cb387be9d071a14ef472099d4ff853475f1a3e" }
object_store_ffi = { git = "https://github.com/RelationalAI/object_store_ffi", rev = "79b08071c7a1642532b5891253280861eca9e44e", default-features = false }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
libc = "0.2"
anyhow = "1.0"
arrow-array = "57.1"
arrow-buffer = "57.1"
arrow-schema = "57.1"
arrow-ipc = "57.1"
parquet = "57.1"
tracing-subscriber = "0.3"
tracing = "0.1"
once_cell = "1.19"
async-trait = "0.1"
# Pin home to 0.5.9 to support rustc < 1.88
# (0.5.11+ requires rustc 1.88+)
home = "=0.5.9"
serde_json = "1.0.142"

[dev-dependencies]
tempfile = "3.0"
